--- a/dp-price-scraper/src/index.css
+++ b/dp-price-scraper/src/index.css
@@ -1,7 +1,92 @@
-body {
+.ui {
+  background-color: #c0c5ce;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica,
     Arial, sans-serif;
   margin: auto;
-  max-width: 38rem;
+  /* max-width: 38rem; */
   padding: 2rem;
+  display: grid;
+  grid-template-columns: 30vw 65vw 5vw;
+  grid-template-rows: 110px auto;
+  gap: 10px;
+  color: white;
+}
+
+head {
+  grid-column: 1/2;
+  grid-row: 1/2;
+}
+
+#title {
+  font-size: 1.5em;
+  font-weight: bold;
+  overflow: hidden;
+}
+
+nav {
+  margin-top: 10vh;
+  grid-column: 1/2;
+  grid-row: 2/3;
+  height: 65vh;
+  width: 30vw;
+}
+
+main {
+  display: flex;
+  background-color: #f2f2f2;
+  margin: 0 10px 5px 2px;
+  border: 1px solid;
+  position: relative;
+  /* border-image: linear-gradient(to right, red, #595859) 1; */
+  border-radius: 5px 50px;
+  padding: 1rem;
+  grid-column: 2/3;
+  grid-row: 2/3;
+}
+
+.navbtn {
+  width: 30vw;
+  height: 10vh;
+  font-size: 1.5em;
+  /* display: inline-flex; */
+  border-image-slice: 1;
+  border-width: 3px solid;
+  /* border-collapse: collapse;  */
+  border-image-source: linear-gradient(to right, red, blue);
+  margin: 2px;
+  text-transform: uppercase;
+  text-decoration: none;
+  letter-spacing: 1.5px;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  position: relative;
+  cursor: pointer;
+  background-color: #c0c5ce;
+}
+
+.navbtn:hover .translate {
+  left: 0;
+}
+
+.navbtn a {
+  color: #636366;
+  position: relative;
+  transition: all .4s ease-Out;
+  text-decoration: none;
+}
+
+.navbtn:hover a {
+  color: white;
+}
+
+.translate {
+  transform: rotate(45deg);
+  width: 100%;
+  height: 200%;
+  left: -450px;
+  top: -30px;
+  background: linear-gradient(to right, red, blue);
+  position: absolute;
+  transition: all .3s ease-Out;
 }
