cleaned up bridges and ipcMain files saving

--- a/DP-Scraper_React_Electron/src/index.css
+++ b/DP-Scraper_React_Electron/src/index.css
@@ -19,7 +19,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
-
+#root{
+  margin-top: 2em;
+}
 head {
   grid-column: 1/2;
   grid-row: 1/2;
@@ -92,6 +94,7 @@ nav {
 }
 
 .dplogo {
+  margin-top: 1em;
   float: left;
   height: 20vmin;
   width:  20vmin;
