--- a/DP-Scraper_React_Electron/src/index.css
+++ b/DP-Scraper_React_Electron/src/index.css
@@ -106,8 +106,8 @@ nav {
 
 .Loading-logo {
   float: right;
-  margin-top: 2em;
-  margin-right: 25vw;
+  /* margin-top: 2em; */
+  /* margin-right: 25vw; */
   height: 20vmin;
   pointer-events: none;
 }
@@ -185,4 +185,15 @@ td {
 .scrp{
   width: 250px;
   margin-top: 0.2em;
+}
+.console-log{
+  border-radius: 15px;
+  padding: 1em;
+  background-color: #192223;
+  color: #f2f2f2;
+  height: 30vh;
+  width: 30vw;
+  overflow: auto;
+  display: flex;
+  flex-direction: column-reverse;
 }
