added select print and backup feature

--- a/DP-Scraper_React_Electron/src/index.css
+++ b/DP-Scraper_React_Electron/src/index.css
@@ -1,6 +1,6 @@
 body {
   color: #f2f2f2;
-  text-align: center;
+  /* text-align: center; */
   background-color: #3b3e43;
   height: 100vh;
   margin: 1em;
@@ -188,3 +188,4 @@ td {
   display: flex;
   float: right;
 }
+
